fixed issue with layout spacing

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,6 +1,6 @@
 h1 {
   font-weight: 700;
-  font-size: 4rem;
+  font-size: 3rem;
   color: var(--light-h);
   margin-bottom: 1rem;
 }
