--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -6,16 +6,16 @@ main {
 
 .introduction {
   max-width: 68%;
-  z-index: 5;
+  z-index: 1;
   position: relative;
   padding: 1.5rem 0 0 1.5rem;
 
   @media screen and (min-width: 600px) {
-    padding: 2rem 0 0 2rem;
+    padding: 4rem 0 0 2rem;
   }
 
   @media screen and (min-width: 1024px) {
-    padding: 4rem 0 0 4rem;
+    padding: 8rem 0 0 4rem;
   }
 
   .intro-1 {
@@ -44,6 +44,28 @@ main {
   }
 }
 
+.about-me {
+  position: relative;
+  z-index: 1;
+
+  &-container {
+    position: relative;
+    background-color: var(--light-tertiary);
+    padding: 1.5rem 0 0 1.5rem;
+
+    @media screen and (min-width: 600px) {
+      padding: 2rem 0 0 2rem;
+    }
+
+    @media screen and (min-width: 1024px) {
+      padding: 2rem 0 0 4rem;
+    }
+  }
+
+  &--text {
+  }
+}
+
 .jet-cat {
   height: 27rem;
   position: absolute;
@@ -58,23 +80,16 @@ main {
 .mo-coding {
   position: absolute;
   z-index: 5;
-  height: 20rem;
+  height: 15rem;
   right: 0;
-  top: 48%;
+  top: 5%;
 
   @media screen and (min-width: 600px) {
-    top: 65%;
+    height: 20rem;
   }
 
   @media screen and (min-width: 1024px) {
-    top: 75%;
-    height: 30rem;
+    height: 25rem;
+    top: 35%;
   }
-}
-
-.bg-shape1 {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  top: 50vh;
 }
